# lnxdsp-mcapi

./: LICENSE.md  README.md  mcapi.c  mcapi_trans_stub.c
include/: mca.h  mcapi_dev_impl.h  mcapi_test.h  transport_sm.h
libmcapi-2.0/tests/: Makefile.am  arm_sharc_audio_vol.c  arm_sharc_msg1.c  arm_sharc_pkt1.c  arm_sharc_scl1.c  bmp2jpg.c  endpoints1.c  msg2.c  pkt1.c  scl2.c
libmcapi-2.0/tests/audio_demo_qt_res/: go  pointercal
libmcapi-2.0/tests/audio_demo_qt_res/3band_qt_src/: main.cpp  mainwindow.cpp  mainwindow.h
tests/: Makefile.am  arm_sharc_msg1.c  arm_sharc_msg_demo.c  arm_sharc_msg_test.c  arm_sharc_pkt1.c  arm_sharc_scl1.c  cces_msg1.c  msg1.c  pkt2.c  pkt3.c  scl1.c
tests/audio_demo_qt_res/: README  go
tests/audio_demo_qt_res/3band_qt_src/: mainwindow.h
trans_impl/: tran_impl_dev.c
